# TazaKhabar

./: .gitignore  LICENSE  README.md  checklist.md  package-lock.json  package.json  tailwind.config.ts
.planning/: ROADMAP.md  STATE.md
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AppShell.tsx  BottomNav.tsx  ErrorCard.tsx  TazaContext.tsx  TopNav.tsx
src/lib/: api.ts  mockData.ts  useLocalStorage.ts
src/types/: index.ts
tazakhabar-backend/: .env  .env.example  .gitignore  .last_wih_thread  Dockerfile  pyproject.toml  railway.json  requirements.txt  tazakhabar_scraper.ipynb  test_setup.py
tazakhabar-backend/NoteBooks/: company_data.csv  job_scraper.ipynb  jobs_output.csv  scrapper.ipynb
tazakhabar-backend/Test/: API_Check.py  P1.py  P2.py
tazakhabar-backend/src/: config.py  main.py  notifications.py  scheduler.py
tazakhabar-backend/src/api/: __init__.py  badge.py  csv_loader.py  deps.py  digest.py  jobs.py  news.py  observation.py  profile.py  qa.py  refresh.py  resume.py  trends.py
tazakhabar-backend/src/db/: __init__.py  database.py  models.py  schemas.py
tazakhabar-backend/src/middleware/: logging.py
tazakhabar-backend/src/scrapers/: __init__.py  ask_hn.py  base_scraper.py  client.py  show_hn.py  top_stories.py  who_is_hiring.py
tazakhabar-backend/src/services/: csv_loader_service.py  digest_service.py  embedding_service.py  job_processing_service.py  llm_service.py  report_service.py  resume_service.py  trend_service.py
tazakhabar-backend/src/tazakhabar_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+19 files in other folders)
