[project]
name = "tazakhabar-backend"
version = "1.0.0"
description = "Backend API for TazaKhabar news scraping service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "hypercorn==0.16.0",
    "httpx==0.26.0",
    "aiosqlite==0.19.0",
    "sqlalchemy[asyncio]==2.0.25",
    "alembic==1.13.1",
    "apscheduler==3.10.4",
    "beautifulsoup4==4.12.3",
    "lxml==5.1.0",
    "python-dotenv==1.0.1",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.9",
    "tenacity==8.2.3",
    "google-genai==0.3.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
